# yolo

./: .dvignore  .gitignore  Cargo.toml  README.md  TODO.md  game_log.txt  memo.md  test.ps1
.cargo/: config.toml
.diversion/: dv.ws.25e5d37d-9f7c-4519-bf6e-3c7a2718b7cf
.github/: copilot-instructions.md
.github/workflows/: release.yaml
assets/scenes/rooms/: corridor.scn.ron  junction.scn.ron  large_room.scn.ron  small_room.scn.ron  stairwell.scn.ron
crates/client/: Cargo.toml
crates/client/src/: app.rs  audio.rs  camera.rs  game_state.rs  input.rs  lib.rs  menu.rs  network.rs  render.rs
crates/client/src/menu/: main_menu.rs  mod.rs
crates/common/: Cargo.toml
crates/common/src/: game_state.rs  input.rs  lib.rs  protocol.rs
crates/launcher/: Cargo.toml
crates/launcher/src/: main.rs  native.rs  wasm.rs
crates/launcher/tests/: integration_tests.rs  movement_test.rs  multiplayer_tests.rs
crates/server/: Cargo.toml
crates/server/src/: app.rs  gameplay.rs  lib.rs  network.rs  render.rs
crates/shared/: Cargo.toml
crates/shared/src/: input.rs  lib.rs  protocol.rs  render.rs  scene.rs
src/: audio.rs  client.rs  combat.rs  debug_ui.rs  enemies.rs  environment.rs  events.rs  game_state.rs  integration_tests.rs  lib.rs  main.rs  menu.rs  observers.rs  player.rs  protocol.rs  scenes.rs  server.rs  shared.rs  static_level.rs  ui.rs  utils.rs
tests/: bullet_fixes_verification.rs  bullet_physics_tests.rs  combat_tests.rs  integration_tests.rs  multiplayer_tests.rs  world.rs
