[package]
name = "gtfo-like-game"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
description = "A GTFO-like cooperative survival horror game built with Bevy and Avian"

[features]
default = ["client", "server", "gui"]
client = []
server = []
gui = ["bevy/bevy_ui"]
debug = []

[lib]
name = "gtfo_like_game"
path = "src/lib.rs"

[[bin]]
name = "game"
path = "src/main.rs"

[dependencies]
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
bevy = { version = "0.16", features = [
    "dynamic_linking",
    "bevy_gltf",
    "bevy_winit",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_asset",
    "bevy_scene",
    "bevy_animation",
    "bevy_ui",
    "bevy_text",
    "png",
    "hdr",
    "ktx2",
    "zstd",
    "tonemapping_luts",
    "multi_threaded",
    "bevy_debug_stepping",
] }
avian3d = "0.3.1"
bevy_kira_audio = { version = "0.23.0", features = ["mp3", "wav", "ogg"] }
# Networking dependencies (updated to 0.23.0)
lightyear = { version = "0.23", features = [
    "leafwing",
    "avian3d",
    "client",
    "server",
    "netcode",
    "udp",
    "replication",
] }
lightyear_avian3d = "0.23"
clap = { version = "4.4", features = ["derive"] }
bevy_egui = "0.36.0"
bevy-inspector-egui = "0.33.1"
rand = "0.9.2"
noise = "0.9.0"
bracket-random = "0.8"
serde = { version = "1.0", features = ["derive"] }
bincode = "2.0.1"
leafwing-input-manager = "0.17.1"
anyhow = "1.0.99"

[profile.dev]
opt-level = 1
incremental = true

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.bevy]
opt-level = 3

[profile.dev.package.avian3d]
opt-level = 3

[dev-dependencies]
serde_json = "1.0"

[profile.release]
lto = true
opt-level = "s"
strip = true
