[workspace]
members = ["crates/client", "crates/common", "crates/launcher", "crates/server"]
resolver = "2"
default-members = ["crates/launcher"]


[workspace.dependencies]
bevy = { version = "0.16", features = [
    "serialize",
    "bevy_asset",
    "bevy_state",
    "bevy_pbr",
    "bevy_ui",
    "bevy_ui_picking_backend",
    "default_font",
    "tonemapping_luts",
    "animation",
    "bevy_animation",
    "bevy_gltf",
    "png",
    "bevy_window",
    "bevy_winit",
    "webgpu",                  # TODO: Disable this when not on WASM
    "x11",
    "dynamic_linking",         # Enable dynamic linking for faster dev builds
], default-features = false }

rand = "0.9.2"
bevy-inspector-egui = "0.33.1"

bevy_egui = { version = "0.36.0", default-features = false, features = [
    "open_url",
    "default_fonts",
    "render",
] }

bincode = "1.3.3"
serde = "1.0.224"
crossbeam-channel = "0.5.14"
getrandom = { version = "0.3.3", features = ["wasm_js"] }

lightyear = { version = "0.23.0", features = [
    "leafwing",
    "avian3d",
    "websocket",
    "webtransport",
    "webtransport_self_signed",
    "udp",
    "replication",
    "crossbeam",
    "frame_interpolation",
    "lightyear_aeronet",
    "netcode",
] }

avian3d = { version = "0.3.0", features = [
    "3d",
    "f32",
    "parry-f32",
    "parallel",
    "serialize",
    "enhanced-determinism",
    "collider-from-mesh",
    "debug-plugin",
], default-features = false }

leafwing-input-manager = { version = "0.17", default-features = false, features = [
    "keyboard",
    "gamepad",
    "mouse",
] }


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# Additional Bevy compilation speed optimizations
[profile.dev.package.bevy_dylib]
opt-level = 1

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"

[workspace.lints.rust]
dead_code = "allow"
unused_variables = "allow"
unused_imports = "allow"

[workspace.lints.clippy]
type_complexity = "allow"
