[workspace]
members = [
    "crates/client",
    "crates/shared",
    "crates/launcher",
    "crates/server",
    # "crates/local_game",
]
resolver = "2"
default-members = ["crates/launcher"]
lints = {}


[workspace.dependencies]
avian3d = { version = "0.3.1", default-features = true, features = [
    "serialize",
] }
bevy = { version = "0.16.1", features = [
    "serialize",
    "bevy_asset",
    "bevy_state",
    "bevy_pbr",
    "bevy_ui",
    "bevy_ui_picking_backend",
    "default_font",
    "tonemapping_luts",
    "animation",
    "bevy_animation",
    "bevy_gltf",
    "png",
    "bevy_window",
    "bevy_winit",
    "webgpu",                  # TODO: Disable this when not on WASM
    "x11",
    "dynamic_linking",         # Enable dynamic linking for faster dev builds
], default-features = false }
rand = "0.9.2"
bevy-inspector-egui = "0.33.1"
bevy_egui = { version = "0.36.0" }
bincode = "2.0.1"
serde = "1.0.226"
crossbeam-channel = "0.5.15"
getrandom = { version = "0.3.3", features = ["wasm_js"] }
lightyear = { version = "0.24.2", default-features = true, features = [
    "netcode",
    "leafwing",
    "avian3d",
    "udp",
    "crossbeam",
    "prediction",
    "interpolation",
] }
leafwing-input-manager = { version = "0.17.1" }


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.bevy_dylib]
opt-level = 1

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
