[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
lightyear.workspace = true
bevy-inspector-egui.workspace = true
leafwing-input-manager.workspace = true
avian3d.workspace = true
serde.workspace = true
bevy.workspace = true
crossbeam-channel.workspace = true
bevy_kira_audio = { version = "0.23.0", features = ["mp3", "wav", "ogg"] }

[lints]
workspace = true
